src/MasterFileParser.py
# Generated from src/MasterFile.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MasterFileParser ( Parser ):

    grammarFileName = "MasterFile.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "','", "'='", "'/'", "';'" ]

    symbolicNames = [ "<INVALID>", "FILENAME_KW", "SEGNAME_KW", "FIELDNAME_KW",
                      "DIMENSION_KW", "HIERARCHY_KW", "VARIABLE_KW", "DEFINE_KW",
                      "COMPUTE_KW", "TERMINATOR", "COMMA", "EQUALS", "SLASH",
                      "SEMICOLON", "ATTR", "UNQUOTED_VALUE", "STRING", "WS" ]

    RULE_start = 0
    RULE_item = 1
    RULE_declaration = 2
    RULE_file_decl = 3
    RULE_segment_decl = 4
    RULE_field_decl = 5
    RULE_dimension_decl = 6
    RULE_hierarchy_decl = 7
    RULE_variable_decl = 8
    RULE_define_decl = 9
    RULE_compute_decl = 10
    RULE_other_decl = 11
    RULE_attr_val = 12
    RULE_assignment = 13
    RULE_name_format = 14
    RULE_value = 15
    RULE_expression = 16
    RULE_expression_part = 17

    ruleNames =  [ "start", "item", "declaration", "file_decl", "segment_decl",
                   "field_decl", "dimension_decl", "hierarchy_decl", "variable_decl",
                   "define_decl", "compute_decl", "other_decl", "attr_val",
                   "assignment", "name_format", "value", "expression", "expression_part" ]

    EOF = Token.EOF
    FILENAME_KW=1
    SEGNAME_KW=2
    FIELDNAME_KW=3
    DIMENSION_KW=4
    HIERARCHY_KW=5
    VARIABLE_KW=6
    DEFINE_KW=7
    COMPUTE_KW=8
    TERMINATOR=9
    COMMA=10
    EQUALS=11
    SLASH=12
    SEMICOLON=13
    ATTR=14
    UNQUOTED_VALUE=15
    STRING=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MasterFileParser.EOF, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.ItemContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.ItemContext,i)


        def getRuleIndex(self):
            return MasterFileParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = MasterFileParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17406) != 0):
                self.state = 36
                self.item()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(MasterFileParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MasterFileParser.DeclarationContext,0)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = MasterFileParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_item)
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(MasterFileParser.TERMINATOR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def file_decl(self):
            return self.getTypedRuleContext(MasterFileParser.File_declContext,0)


        def segment_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Segment_declContext,0)


        def field_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Field_declContext,0)


        def dimension_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Dimension_declContext,0)


        def hierarchy_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Hierarchy_declContext,0)


        def define_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Define_declContext,0)


        def compute_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Compute_declContext,0)


        def variable_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Variable_declContext,0)


        def other_decl(self):
            return self.getTypedRuleContext(MasterFileParser.Other_declContext,0)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MasterFileParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.file_decl()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.segment_decl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.field_decl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.dimension_decl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.hierarchy_decl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.define_decl()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 54
                self.compute_decl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 8)
                self.state = 55
                self.variable_decl()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 9)
                self.state = 56
                self.other_decl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 10)
                self.state = 57
                self.match(MasterFileParser.TERMINATOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILENAME_KW(self):
            return self.getToken(MasterFileParser.FILENAME_KW, 0)

        def value(self):
            return self.getTypedRuleContext(MasterFileParser.ValueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def EQUALS(self):
            return self.getToken(MasterFileParser.EQUALS, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_file_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_decl" ):
                listener.enterFile_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_decl" ):
                listener.exitFile_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_decl" ):
                return visitor.visitFile_decl(self)
            else:
                return visitor.visitChildren(self)




    def file_decl(self):

        localctx = MasterFileParser.File_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_file_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(MasterFileParser.FILENAME_KW)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 61
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 64
            self.value()
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    self.match(MasterFileParser.COMMA)
                    self.state = 66
                    self.attr_val()
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 72
                self.match(MasterFileParser.COMMA)


            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 75
                self.match(MasterFileParser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Segment_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEGNAME_KW(self):
            return self.getToken(MasterFileParser.SEGNAME_KW, 0)

        def value(self):
            return self.getTypedRuleContext(MasterFileParser.ValueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def EQUALS(self):
            return self.getToken(MasterFileParser.EQUALS, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_segment_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSegment_decl" ):
                listener.enterSegment_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSegment_decl" ):
                listener.exitSegment_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSegment_decl" ):
                return visitor.visitSegment_decl(self)
            else:
                return visitor.visitChildren(self)




    def segment_decl(self):

        localctx = MasterFileParser.Segment_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_segment_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MasterFileParser.SEGNAME_KW)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 79
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 82
            self.value()
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 83
                    self.match(MasterFileParser.COMMA)
                    self.state = 84
                    self.attr_val()
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 90
                self.match(MasterFileParser.COMMA)


            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 93
                self.match(MasterFileParser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIELDNAME_KW(self):
            return self.getToken(MasterFileParser.FIELDNAME_KW, 0)

        def value(self):
            return self.getTypedRuleContext(MasterFileParser.ValueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def EQUALS(self):
            return self.getToken(MasterFileParser.EQUALS, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_field_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_decl" ):
                listener.enterField_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_decl" ):
                listener.exitField_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_decl" ):
                return visitor.visitField_decl(self)
            else:
                return visitor.visitChildren(self)




    def field_decl(self):

        localctx = MasterFileParser.Field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MasterFileParser.FIELDNAME_KW)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 97
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 100
            self.value()
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 101
                    self.match(MasterFileParser.COMMA)
                    self.state = 102
                    self.attr_val()
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 108
                self.match(MasterFileParser.COMMA)


            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 111
                self.match(MasterFileParser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimension_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIMENSION_KW(self):
            return self.getToken(MasterFileParser.DIMENSION_KW, 0)

        def value(self):
            return self.getTypedRuleContext(MasterFileParser.ValueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def EQUALS(self):
            return self.getToken(MasterFileParser.EQUALS, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_dimension_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimension_decl" ):
                listener.enterDimension_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimension_decl" ):
                listener.exitDimension_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension_decl" ):
                return visitor.visitDimension_decl(self)
            else:
                return visitor.visitChildren(self)




    def dimension_decl(self):

        localctx = MasterFileParser.Dimension_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimension_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MasterFileParser.DIMENSION_KW)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 115
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 118
            self.value()
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    self.match(MasterFileParser.COMMA)
                    self.state = 120
                    self.attr_val()
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 126
                self.match(MasterFileParser.COMMA)


            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 129
                self.match(MasterFileParser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hierarchy_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HIERARCHY_KW(self):
            return self.getToken(MasterFileParser.HIERARCHY_KW, 0)

        def value(self):
            return self.getTypedRuleContext(MasterFileParser.ValueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def EQUALS(self):
            return self.getToken(MasterFileParser.EQUALS, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_hierarchy_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHierarchy_decl" ):
                listener.enterHierarchy_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHierarchy_decl" ):
                listener.exitHierarchy_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHierarchy_decl" ):
                return visitor.visitHierarchy_decl(self)
            else:
                return visitor.visitChildren(self)




    def hierarchy_decl(self):

        localctx = MasterFileParser.Hierarchy_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_hierarchy_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MasterFileParser.HIERARCHY_KW)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 133
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 136
            self.value()
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 137
                    self.match(MasterFileParser.COMMA)
                    self.state = 138
                    self.attr_val()
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 144
                self.match(MasterFileParser.COMMA)


            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.state = 147
                self.match(MasterFileParser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_KW(self):
            return self.getToken(MasterFileParser.VARIABLE_KW, 0)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_variable_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_decl" ):
                listener.enterVariable_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_decl" ):
                listener.exitVariable_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = MasterFileParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(MasterFileParser.VARIABLE_KW)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,24,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 153
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [14, 15, 16]:
                        self.state = 151
                        self.attr_val()
                        pass
                    elif token in [10]:
                        self.state = 152
                        self.match(MasterFileParser.COMMA)
                        pass
                    else:
                        raise NoViableAltException(self)

                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,24,self._ctx)

            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.state = 158
                self.match(MasterFileParser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Define_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE_KW(self):
            return self.getToken(MasterFileParser.DEFINE_KW, 0)

        def name_format(self):
            return self.getTypedRuleContext(MasterFileParser.Name_formatContext,0)


        def EQUALS(self):
            return self.getToken(MasterFileParser.EQUALS, 0)

        def expression(self):
            return self.getTypedRuleContext(MasterFileParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(MasterFileParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MasterFileParser.COMMA)
            else:
                return self.getToken(MasterFileParser.COMMA, i)

        def attr_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MasterFileParser.Attr_valContext)
            else:
                return self.getTypedRuleContext(MasterFileParser.Attr_valContext,i)


        def TERMINATOR(self):
            return self.getToken(MasterFileParser.TERMINATOR, 0)

        def getRuleIndex(self):
            return MasterFileParser.RULE_define_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_decl" ):
                listener.enterDefine_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_decl" ):
                listener.exitDefine_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_decl" ):
                return visitor.visitDefine_decl(self)
            else:
                return visitor.visitChildren(self)




    def define_decl(self):
